Fixed CSS! Got status circle vertically aligned and floated to the right

--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -13,6 +13,17 @@ header {
 	border-bottom: 1px solid #CCCCCC;
 }
 
+#api_status {
+	float: right;
+    margin-right: 30px;
+    background-color: #CCCCCC;
+    width: 40px;
+    height: 40px;
+	border-radius: 50%;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
 .available {
 	background-color: #FF545F;
 }
